syntax = "proto3";
package proto;

message RunRequest {
  int32 cell = 1;
  string cwd = 2;
  repeated string argv = 3;
}

message TermAttr {
  int32 fg = 1;
  int32 bg = 2;
}

message TermText {
  int32 row = 1;
  message Span {
    TermAttr attr = 1;
    string text = 2;
  }
  repeated Span spans = 2;
}

message TermState {
  // e.g. cursor position
}

message Output {
  int32 cell = 1;
  oneof output {
    string error = 2;
    TermText text = 3;
    int32 exit_code = 4;
  }
}

message ServerMsg {
  oneof msg {
    Output output = 1;
  }
}
